plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.jiyoung.kikihi'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	// DB
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.h2database:h2'
	implementation 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Basic
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// devtools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'


	//docker
//	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	testImplementation 'com.github.codemonstur:embedded-redis:1.4.3' //test시 compile할때 build

	//aws
	implementation 'software.amazon.awssdk:s3:2.20.47' 	// AWS SDK v2 S3 의존성
	implementation 'software.amazon.awssdk:sdk-core:2.20.47'	// AWS SDK v2 Core 의존성

	//elastic Search
//	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

	// security
	implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3' // jwt 라이브러리
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3' // jwt 라이브러리
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3' // jwt 라이브러리

	//swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.3'

	//test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.springframework.security:spring-security-test'

	//json
	implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.15.0'
	tasks.withType(JavaCompile) {
		options.compilerArgs << '-parameters'
	}


}
tasks.named('test') {
	useJUnitPlatform()
}
